--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Learn React</title>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+  <title>Learn Vue</title>
 </head>
 
 <body>
-
-  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-
-  <script>
-    {
-      message: 'Dog Pictures'
-    }
-  </script>
+  <div id='app'>
+    {{ message }}
+  </div>
+  <script src='index.js'></script>
 </body>
 
 </html>
