--- a/index.html
+++ b/index.html
@@ -10,10 +10,34 @@
 </head>
 
 <body>
-  <div id='app'>
+  <div id="app">
     {{ message }}
   </div>
-  <script src='index.js'></script>
+  <br>
+  <div id="app-2">
+    <span v-bind:title="message">
+      Hover your mouse over me for a few seconds to see my dynamically bound title!
+    </span>
+  </div>
+  <br>
+  <div id="app-3">
+    <span v-if="seen">Now you see me</span>
+  </div>
+  <br>
+  <div id="app-4">
+    <ol>
+      <li v-for="todo in todos">
+        {{ todo.text }}
+      </li>
+    </ol>
+  </div>
+  <br>
+  <div id="app-5">
+    <p>{{ message }}</p>
+    <button v-on:click="reverseMessage">Reverse Message</button>
+  </div>
+  <br>
+  <script src="index.js"></script>
 </body>
 
 </html>
