--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
     <button v-on:click="reverseMessage">Reverse Message</button>
   </div>
   <br>
+  <div id="app-6">
+    <p>{{ message }}</p>
+    <input v-model="message">
+  </div>
+  <br>
   <script src="index.js"></script>
 </body>
 
