create vue component and use it to render new todo items on page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
     <input v-model="message">
   </div>
   <br>
+  <div id="app-7">
+    <ol>
+      <todo-item
+      v-for="item in groceryList"
+      v-bind:todo="item"
+      v-bind:key="item.id"
+      ></todo-item>
+    </ol>
+  </div>
+
   <script src="index.js"></script>
 </body>
 
